--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="year">2024 July 3</div>
                 <div class="content">
                     <h3>First Meet &#9733;</h3>
-                    <img src="photos/jigar2.jpg"First Chat Image" class="event-img">
+                    <img src="photos/jigar2.jpg" alt="First Meet Image" class="event-img">
                     <p>Sante sipil ayrnn nn ariyalloo...Apo valla pic edkkanam ayrnnn...😏 <br>Jigarthanda😋</p>
                 </div>
             </div>
@@ -33,7 +33,7 @@
                 <div class="year">2024 July 6</div>
                 <div class="content">
                     <h3>Azhimala &#9733;</h3>
-                    <img src="photos/day_poster.jpg" alt="First Chat Image" class="event-img">
+                    <img src="photos/day_poster.jpg" alt="Azhimala" class="event-img">
                     <p>What a day lllee...😌</p>
                     <p><i><small>(bhagyam ente purse povathath 😮‍💨)</small></i></p>
                 </div>
@@ -42,7 +42,7 @@
                 <div class="year">2024 July 6</div>
                 <div class="content">
                     <h3>Planetarium &#9733;</h3>
-                    <img src="photos/planetarium.jpg" alt="First Chat Image" class="event-img">
+                    <img src="photos/planetarium.jpg" alt="Planetarium" class="event-img">
                     <p>Galileo ne Chillkkooootil adachuu vechekkunnu nn paranjj alinjitt, pic edkkan aayappoo nthaaa chmileee 😏</p>
                 </div>
             </div>
@@ -50,7 +50,7 @@
                 <div class="year">2024 Aug 10</div>
                 <div class="content">
                     <h3>Conjuring &#9733;</h3>
-                    <img src="photos/hostel1.jpg" alt="First Chat Image" class="event-img">
+                    <img src="photos/hostel1.jpg" alt="Ninte Hostel" class="event-img">
                     <p>Aadyam thenne kannil kuthyy...😬<br>Pinne silmaaa....Pedikkum nn paranjj addyame koree buildup oke thannitt...nthaaay...horror movie comedy aayy🤣👻</p>
                 </div>
             </div>
@@ -58,7 +58,7 @@
                 <div class="year">2024 Sep</div>
                 <div class="content">
                     <h3>Emotionaal fight &#9733;</h3>
-                    <img src="photos/fejo2.jpg" alt="First Chat Image" class="event-img">
+                    <img src="photos/fejo1.jpg" alt="Fejo" class="event-img">
                     <p>Orma indoo avvoooo...😏 
                         <br>Onn rand day max mundandirikkan mwon nokkyayrnn...<br>
                         Ente kayivkond ath nadannillaa 😌😎
@@ -69,7 +69,7 @@
                 <div class="year">2025 Jan</div>
                 <div class="content">
                     <h3>Nagercoil &#9733;</h3>
-                    <img src="photos/nag_view.jpg" alt="First Chat Image" class="event-img">
+                    <img src="photos/nag_view.jpg" alt="Nagercoil" class="event-img">
                     <p>🏞️🏔️🚄☁️</p>
                 </div>
             </div>
@@ -77,7 +77,7 @@
                 <div class="year">2025 Feb 7</div>
                 <div class="content">
                     <h3>Interstellar </h3>
-                    <img src="photos/stellar31.jpg" alt="First Chat Image" class="event-img">
+                    <img src="photos/stellar31.jpg" alt="Interstellar" class="event-img">
                     <p>🌚..........STAYYY..........🌝</p>
                 </div>
             </div>
