--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
         </div>
     </section>
     <footer class="hero">
-        <p>Happy Birthday Mahn...Thankyou for making me happy all the time...🥹</p>
+        <p>Happy Birthday Mahn...Thankyou for making me happy all the time...🥹 
+        <br>Stay the same. 🪄
+        <br>Travel a lottt...! 🛸
+        <br>Lots of Love...Muaahhhhh 💏</p>
     </footer>
     <script src="script.js"></script>
 </body>
