Corrected the footer animation
-now only the text animation as expected

--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
         <p>Happy Birthday Mahn...Thankyou for making me happy all the time...🥹 
         <br>Stay the same. 🪄
         <br>Travel a lottt...! 🛸
-        <br>Lots of Love...Muaahhhhh 💏</p>
+        <br>Lots of Love...
+        <br>Muaahhhhh 💏</p>
     </footer>
     <script src="script.js"></script>
 </body>
