Modify circle radius top and bottom

--- a/index.html
+++ b/index.html
@@ -85,10 +85,11 @@
         </div>
     </section>
     <footer class="hero">
-        <p>Happy Birthday Mahn...Thankyou for making me happy all the time...🥹 
+        <p>Happy Birthday Mahn...🥳🎉
+        <br>Thankyou for making me happy all the time...🥹💚
         <br>Stay the same. 🪄
-        <br>Travel a lottt...! 🛸
-        <br>Lots of Love...
+        <br>Travel a lottt...! 🫂🛸
+        <br>Lots of Love...💖
         <br>Muaahhhhh 💏</p>
     </footer>
     <script src="script.js"></script>
