Nagercoil day added

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </div>
             </div>
             <div class="timeline-item left" data-year="2025">
-                <div class="year">2025 Jan</div>
+                <div class="year">2025 Jan 14</div>
                 <div class="content">
                     <h3>Nagercoil &#9733;</h3>
                     <img src="photos/nag_view.jpg" alt="Nagercoil" class="event-img">
