Background change- Test1

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="timeline-item right" data-year="2024">
                 <div class="year">2024 Sep</div>
                 <div class="content">
-                    <h3>Emotionaal fight &#9733;</h3>
+                    <h3>Emotional fight &#9733;</h3>
                     <img src="photos/fejo1.jpg" alt="Fejo" class="event-img">
                     <p>Orma indoo avvoooo...😏 
                         <br>Onn rand day max mundandirikkan mwon nokkyayrnn...<br>
